0029988: AIS_Shape - SetWidth() and SetColor() has no effect for FaceBoundary

AIS_Shape SetWidth and SetColor methods now propagate modifications to FaceBoundary aspect.